--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "devtools": "^7.6.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "nodemon": "^2.0.7",
+    "npm": "^7.13.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
